--- a/config/database.yml
+++ b/config/database.yml
@@ -21,6 +21,12 @@ development:
   <<: *default
   database: shikaku_sns_development
 
+production:
+  <<: *default
+  database: shikaku_sns_production
+  username: root
+  password: <%= Rails.application.credentials.db[:password] %>
+  host: <%= Rails.application.credentials.db[:hostname] %>
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
